--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.ingredients.IngredientsFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Je suis le fragment ingredients"/>
+        android:id="@+id/recycler_view_ingredient" />
 
 </FrameLayout>
