--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -30,7 +30,7 @@
                 android:layout_marginEnd="12dp"/>-->
 
             <ImageView
-                android:id="@+id/tag_icon"
+                android:id="@+id/list_icon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_margin="12dp"
