--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -4,12 +4,14 @@
     style="@style/Theme.CocktailApp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp">
+    android:layout_marginBottom="18dp">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/search_card"
+        android:id="@+id/list_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/primaryColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,20 +22,11 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <!--<ImageView
-                android:id="@+id/cocktail_image"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/image_description"
-                android:scaleType="centerCrop"
-                android:layout_marginEnd="12dp"/>-->
-
             <ImageView
                 android:id="@+id/list_icon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_margin="12dp"
+                android:layout_margin="25dp"
                 android:layout_gravity="center"
                 android:contentDescription="@string/image_description"
                 android:src="@drawable/tag" />
@@ -60,6 +53,7 @@
                     android:layout_gravity="center"
                     android:contentDescription="@string/image_description"
                     android:src="@drawable/baseline_navigate_next_24"
+                    android:layout_marginEnd="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
