--- a/app/src/main/res/layout/activity_cocktail_detail.xml
+++ b/app/src/main/res/layout/activity_cocktail_detail.xml
@@ -20,7 +20,8 @@
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
             app:title="@string/app_name"
-            app:navigationIcon="@drawable/baseline_arrow_back_24" />
+            app:navigationIcon="@drawable/baseline_arrow_back_24"
+            app:menu="@menu/top_bar_detail"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
