--- a/app/src/main/res/layout/activity_cocktail_detail.xml
+++ b/app/src/main/res/layout/activity_cocktail_detail.xml
@@ -8,6 +8,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/container_detail_top_app_bar"
+        style="@style/Base.Theme.CocktailApp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,12 +97,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cocktail_category"
-        app:tabBackground="@color/design_default_color_on_primary"
-        app:tabIndicatorColor="@color/secondaryColor"
+        app:tabBackground="@color/background_light"
+        app:tabIndicatorColor="@color/primary"
         app:tabSelectedTextAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
-        app:tabSelectedTextColor="@color/secondaryColor"
+        app:tabSelectedTextColor="@color/primary"
         app:tabTextAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
-        app:tabTextColor="@color/primaryColor">
+        app:tabTextColor="@color/primaryDark">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
