--- a/app/src/main/res/layout/fragment_random_cocktail.xml
+++ b/app/src/main/res/layout/fragment_random_cocktail.xml
@@ -11,8 +11,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/random_cocktail_button"
+        android:background="@drawable/button_background"
+        android:textColor="@color/button_text_grey"
         android:layout_gravity="center"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textAppearance="@style/random_button"
+        android:padding="16dp" />
+
+    <!--<Button
+        android:id="@+id/random_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/random_cocktail_button"
+        android:layout_gravity="center"
+        android:gravity="center"/>-->
 
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
